--- a/scss/home/_slider.scss
+++ b/scss/home/_slider.scss
@@ -1,19 +1,111 @@
 @use '../variables' as var;
 @use '../mixins' as mxn;
 
-.slider {
+.slider-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
     width: 100%;
+    .slider {
+       width: 100%;
+       max-width: 1400px;
+       height: 400px;
+       overflow: hidden;
+       position: relative;
+       .slides {
+         display: flex;
+         overflow-x: scroll;
+         position: relative;
+         scroll-behavior: smooth;
+         scroll-snap-type: x mandatory;
+         padding-bottom: 4rem;
+        }
+    }
+    .slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-shrink: 0;
+        width: 100%;
+        height: 400px;
+        scroll-snap-align: center;
+        margin-right: 0px;
+        box-sizing: border-box;
+        background: white;
+        transform-origin: center center;
+        transform: scale(1);
+    }
     .adaptive-img-cover {
         min-width: 240px;
         min-height: 200px;
         width: 100%;
         height: 100%;
     }
-    @media (min-width: 780px) {
-        .adaptive-img-cover {
-            min-height: 340px;
-        }
+    .slide a {
+        background: none;
+        border: none;
+    }
+    a.slide__prev,
+    .slider::before {
+      left: 5%;
+    }
+    a.slide__next, .slider::after {
+        right: 5%;
+    }
+    .slider::before,
+    .slider::after,
+    .slide__prev,
+    .slide__next {
+        position: absolute;
+        top: 48%;
+        width: 35px;
+        height: 35px;
+        padding: 3px;
+        box-sizing: border-box;
+    }
+    .slider::before {
+        content: "\f137";
+        font-family: "Font Awesome 5 Free";
+        opacity: .8;
+        font-size: 3.5rem;
+        color: white;
+        z-index: 1;
+        pointer-events: none;
+    }
+    .slider::after {
+        content: "\f138";
+        font-family: "Font Awesome 5 Free";
+        opacity: .8;
+        font-size: 3.5rem;
+        color: white;
+        z-index: 6;
+        pointer-events: none;
     }
 }
 
-// @media (min-width: 980px) {}
+.slider__nav {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  width: 200px;
+  margin-left: -100px;
+  text-align: center;
+  .slider__navlink {
+    display: inline-block;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: var.$color-footer-bg;
+    margin: 0 10px 0 10px;
+    opacity: .7;
+  }
+  .active {
+    background-color: var.$color-red;
+    opacity: 1;
+}
+}
+
+
+
