--- a/scss/menus/_menus-details.scss
+++ b/scss/menus/_menus-details.scss
@@ -2,3 +2,135 @@
 @use '../mixins' as mxn;
 
 
+.filtered-list {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap:  4rem 1rem;
+    position: relative;
+    padding-bottom: 3rem;
+    button {
+        border: none;
+        outline: none;
+        background-color: var.$color-light;
+        color: var.$color-brown;
+        padding: 1rem 2rem;
+        margin-bottom: 2rem;
+        text-transform: uppercase;
+        font-weight: 700;
+        max-width: fit-content;
+        position: relative;
+        &:focus {
+            background-color: var.$color-red;
+            color: var.$color-light;
+        }
+    }
+    .cheat-div {
+        width: 0px;
+        max-height: 30px;
+    }
+    .adaptive-img-cover {
+        min-width: 47%;
+        height: 230px;
+        box-shadow: 4px 4px 20px 0px var.$color-brown;
+        position: relative;
+        transition: all 450ms ease-in;
+        &:hover {
+            transform: scale(1.05);
+        }
+        &:hover > .container-price {
+            animation: fadeIn 450ms ease-in;
+            opacity: 1;
+        }
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            20% { opacity: 0; }
+            40% { opacity: 0.3; }
+            60% { opacity: 0.5; }
+            80% { opacity: 0.9; }
+            100% { opacity: 1; }
+          }
+    }
+    .container-price {
+        opacity: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        width: 100%;
+        background-color: rgba(76,67,67,.9);
+        padding: 3rem;
+        max-height: 230px;
+        min-height: 230px;
+        .price {
+            max-height: 170px;
+            min-height: 170px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            color: white;
+            text-align: center;
+            box-shadow: 0 0 0 5px white;
+            .adaptive-img-contain {
+               height: 24px;
+                aspect-ratio: 1 / 1;
+            }
+        }
+    }    
+    .cheat-container {
+        width: 100%;
+        height: calc(100% - 60px);
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: -4;
+        background-color: var.$color-light;
+    }
+    @media (min-width: 725px) {
+        .cheat-div {
+        width: 80px;
+        }
+    }
+    @media (min-width: 780px) {
+        .adaptive-img-cover {
+            min-width: calc(97% / 3);
+            height: 250px;
+        }
+        .container-price {
+            max-height: 250px;
+            min-height: 250px;
+            .price {
+                max-height: 190px;
+                min-height: 190px;
+            }
+        }
+    }
+    @media (min-width: 813px) {
+        .cheat-div {
+            width: 180px;
+        }
+    }
+    @media (min-width: 1108px) {
+        min-height: 380px;
+        button {
+            height: fit-content;
+        }
+        .cheat-div {
+            width: 280px;
+        }
+    }
+}
+
+button[data-filter="meat"]:focus ~ div:not([class*="meat"]) {
+    display:none;
+}
+  
+button[data-filter="fish"]:focus ~ div:not([class*="fish"]) {
+    display:none;
+}
+button[data-filter="vegan"]:focus ~ div:not([class*="vegan"]) {
+    display:none;
+}
