--- a/scss/menus/_menus-sides.scss
+++ b/scss/menus/_menus-sides.scss
@@ -7,12 +7,25 @@
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    h1{
+        width: fit-content;
+        &:before {
+            @include mxn.star;
+            top: 35%;
+            left: -5%;
+        }
+        &:after {
+            @include mxn.star;
+            top: 35%;
+            left: 101%;
+        }
+    }
     h2 {
         width: fit-content;
         &:before {
             @include mxn.star;
             top: 35%;
-            left: -9%;
+            left: -10%;
         }
         &:after {
             @include mxn.star;
