--- a/scss/_global-style.scss
+++ b/scss/_global-style.scss
@@ -1,4 +1,5 @@
 @use './variables' as var;
+@use './mixins' as mxn;
 
 html {
     min-height: 100%;
@@ -6,12 +7,9 @@ html {
     flex-direction: column;
     font-size: 62.5%;
 }
-
 body {
     max-height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include mxn.flex(column, 0);
     flex: 1 0;
     // overflow: hidden;
     font-weight: 500;
@@ -25,6 +23,13 @@ body {
     h1, h2, h3, h4, h5, h6 {
         font-family: var.$font-title;
         position: relative;
+        width: fit-content;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+    h1:before, h1:after, h2:before, h2:after {
+        @include mxn.star;
     }
     ul {
         list-style: none;
@@ -43,3 +48,72 @@ main {
     align-items: center;
     gap: 3rem;
 }
+.animated {
+    .adaptive-img-cover {
+        min-width: 47%;
+        height: 230px;
+        box-shadow: 4px 4px 20px 0px var.$color-brown;
+        position: relative;
+        transition: all 450ms ease-in;
+        &:hover {
+            transform: scale(1.05);
+        }
+        &:hover > .container-price {
+            animation: fadeIn 450ms ease-in;
+            opacity: 1;
+            @keyframes fadeIn {
+                0% { opacity: 0; }
+                20% { opacity: 0; }
+                40% { opacity: 0.3; }
+                60% { opacity: 0.5; }
+                80% { opacity: 0.9; }
+                100% { opacity: 1; }
+              }
+        }
+        .container-price {
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 2;
+            width: 100%;
+            background-color: rgba(76,67,67,.9);
+            padding: 3rem;
+            height: 100%;
+            .price {
+                max-height: 170px;
+                min-height: 170px;
+                @include mxn.flex(column, 1rem);
+                justify-content: center;
+                color: white;
+                text-align: center;
+                box-shadow: 0 0 0 5px white;
+                .adaptive-img-contain {
+                   height: 24px;
+                    aspect-ratio: 1 / 1;
+                }
+            }
+        }
+        @media (min-width: 780px) {
+            min-width: calc(97% / 3);
+            min-height: 150px;
+            max-height: 150px;
+            .container-price {
+                .price {
+                    max-height: 90px;
+                    min-height: 90px;
+                }
+            }    
+        } 
+        @media (min-width: 980px) {
+            max-height: 300px;
+            min-height: 300px;
+            .container-price {
+                .price {
+                    max-height: 240px;
+                    min-height: 240px;
+                }
+            }
+        }
+    }
+} 
