--- a/scss/about/_private.scss
+++ b/scss/about/_private.scss
@@ -1,39 +1,15 @@
 @use '../variables' as var;
 @use '../mixins' as mxn;
 
-
 .private {
-    display: flex;
-    flex-direction: column;
+    @include mxn.flex(column, 2rem);
     justify-content: center;
-    gap: 2rem;
-    align-items: center;
-    h2 {
-        &:before {
-            @include mxn.star;
-            top: 35%;
-            left: -9%;
-        }
-        &:after {
-            @include mxn.star;
-            top: 35%;
-            left: 101%;
-        }
-    }
     .container-private {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 3rem;
+        @include mxn.flex(column, 3rem);
         padding: 2rem;
         background-color: var.$color-light;
         figure {
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 1rem;
+            @include mxn.flex(column, 1rem);
         }
         .adaptive-img-cover {
             min-width: 100%;
@@ -48,14 +24,9 @@
             gap: 4rem;
             padding: 3rem 2rem;
             figure {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 1rem;
                 flex: 1 0 35%;
             }
             .adaptive-img-cover {
-                min-width: 100%;
                 height: 250px; 
             }
         }
