--- a/scss/contact/_map.scss
+++ b/scss/contact/_map.scss
@@ -2,29 +2,12 @@
 @use '../mixins' as mxn;
 
 .map {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
+    @include mxn.flex(column, 2rem);
     padding-top: 2rem;
-    h2 {
-        &:before {
-            @include mxn.star;
-            top: 35%;
-            left: -9%;
-        }
-        &:after {
-            @include mxn.star;
-            top: 35%;
-            left: 103%;
-        }
-    }
     #map {
         width: 100%;
         iframe {
-            width: 100%;
-            height: 350px;
+            @include mxn.imgLarge;
         }
     }
 }
