--- a/scss/home/_slider.scss
+++ b/scss/home/_slider.scss
@@ -2,15 +2,10 @@
 @use '../mixins' as mxn;
 
 .slider-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include mxn.flex(row, 0);
     height: 100%;
-    width: 100%;
     .slider {
-       width: 100%;
-       max-width: 1400px;
-       height: 400px;
+        @include mxn.imgLarge;
        overflow: hidden;
        position: relative;
        .slides {
@@ -23,12 +18,9 @@
         }
     }
     .slide {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include mxn.flex(row, 0);
         flex-shrink: 0;
-        width: 100%;
-        height: 400px;
+        @include mxn.imgLarge;
         scroll-snap-align: center;
         margin-right: 0px;
         box-sizing: border-box;
@@ -104,8 +96,5 @@
   .active {
     background-color: var.$color-red;
     opacity: 1;
+    }
 }
-}
-
-
-
