--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Athiti:wght@300;400;500;700&family=Merienda:wght@400;700&display=swap");
 *,
 ::after,
 ::before {
@@ -299,62 +298,133 @@ template {
      object-fit: contain;
 }
 
+/* latin */
+@font-face {
+  font-family: "Athiti";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(../assets/fonts/athiti-300.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: "Athiti";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(../assets/fonts/athiti-400.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: "Athiti";
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url(../assets/fonts/athiti-500.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: "Athiti";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(../assets/fonts/athiti-700.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+/* latin */
+@font-face {
+  font-family: "Merienda";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(../assets/fonts/merienda-400.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+@font-face {
+  font-family: "Merienda";
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(../assets/fonts/merienda-700.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 html {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  max-width: 100%;
   min-height: 100%;
+  max-height: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   font-size: 62.5%;
 }
 
 body {
-  max-height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 0;
   flex: 1 0;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+.body {
+  min-height: 100%;
+  overflow: scroll;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
   font-weight: 500;
   font-size: 1.8rem;
   font-family: "Athiti", sans-serif;
   background: rgb(255, 255, 255);
   background: linear-gradient(0deg, rgb(255, 255, 255) 87%, rgb(235, 227, 219) 100%);
 }
-body h1 {
+.body h1 {
   font-size: 3rem;
 }
-body h1, body h2, body h3, body h4, body h5, body h6 {
+.body h1, .body h2, .body h3, .body h4, .body h5, .body h6 {
   font-family: "Merienda", cursive;
   position: relative;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  width: 100%;
   display: flex;
   align-items: center;
+  flex-direction: row;
   gap: 1rem;
+  justify-content: center;
 }
-body h1:before, body h1:after, body h2:before, body h2:after {
+.body h1:before, .body h1:after, .body h2:before, .body h2:after {
   font-size: 1rem;
   content: "\f005";
   color: #950000;
   font-family: "Font Awesome 5 Free";
 }
-body ul {
+.body ul {
   list-style: none;
 }
-body a {
+.body a {
   text-decoration: none;
 }
 
 main {
   width: 100%;
-  max-width: 1400px;
-  padding: 3rem 2rem;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 3rem;
+  justify-content: center;
+  padding: 0 2rem;
+  max-width: 1400px;
 }
 
 .animated .adaptive-img-cover {
@@ -424,8 +494,8 @@ main {
   height: 100%;
 }
 .animated .adaptive-img-cover .container-price .price {
-  max-height: 170px;
   min-height: 170px;
+  max-height: 170px;
   width: 100%;
   display: flex;
   align-items: center;
@@ -447,23 +517,22 @@ main {
     max-height: 150px;
   }
   .animated .adaptive-img-cover .container-price .price {
-    max-height: 90px;
     min-height: 90px;
+    max-height: 90px;
   }
 }
 @media (min-width: 980px) {
   .animated .adaptive-img-cover {
-    max-height: 300px;
     min-height: 300px;
+    max-height: 300px;
   }
   .animated .adaptive-img-cover .container-price .price {
-    max-height: 240px;
     min-height: 240px;
+    max-height: 240px;
   }
 }
 
 header {
-  width: 100%;
   width: 100%;
   display: flex;
   align-items: center;
@@ -553,23 +622,6 @@ header nav ul li a:hover {
   }
   header .logo a > h1 {
     font-size: 2.5rem;
-    white-space: nowrap;
-  }
-  header .logo a > h1:before {
-    font-size: 1rem;
-    content: "\f005";
-    color: #950000;
-    font-family: "Font Awesome 5 Free";
-    top: 25%;
-    left: -7%;
-  }
-  header .logo a > h1:after {
-    font-size: 1rem;
-    content: "\f005";
-    color: #950000;
-    font-family: "Font Awesome 5 Free";
-    top: 25%;
-    left: 102%;
   }
   header .logo .adaptive-img-contain {
     width: 8rem;
@@ -727,22 +779,34 @@ header nav ul li a:hover {
 }
 @media (min-width: 780px) {
   .hero .hero-container .adaptive-img-cover {
-    max-height: 550px !important;
-    min-height: 550px !important;
+    min-height: 550px;
+    max-height: 550px;
   }
+}
+@media (min-width: 980px) {
+  .hero .hero-container .adaptive-img-cover {
+    max-width: 40%;
+    min-width: 40%;
+    min-height: 340px;
+    max-height: 340px;
+  }
+}
+.hero .hero-container .hero-text {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  line-height: 1.5;
 }
 @media (min-width: 980px) {
   .hero .hero-container {
     width: 100%;
-    flex-direction: row-reverse !important;
-    justify-content: center;
-    align-items: flex-start !important;
-  }
-  .hero .hero-container .adaptive-img-cover {
-    max-width: 560px;
-    min-width: 560px !important;
-    min-height: 280px !important;
-    max-height: 280px !important;
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    gap: 3rem;
+    align-items: flex-start;
   }
 }
 
@@ -766,24 +830,24 @@ header nav ul li a:hover {
   transform: scale(1);
 }
 .special-menus .animated .adaptive-img-cover .container-price {
-  max-height: 340px;
   min-height: 340px;
+  max-height: 340px;
 }
 .special-menus .animated .adaptive-img-cover .container-price .price {
-  max-height: 280px;
   min-height: 280px;
+  max-height: 280px;
 }
 @media (min-width: 780px) and (max-width: 989px) {
   .special-menus .animated .adaptive-img-cover {
-    max-height: 550px;
     min-height: 550px;
+    max-height: 550px;
   }
   .special-menus .animated .adaptive-img-cover .container-price {
     min-height: 100%;
   }
   .special-menus .animated .adaptive-img-cover .container-price .price {
-    max-height: 490px;
     min-height: 490px;
+    max-height: 490px;
   }
 }
 .special-menus .container-special-menus {
@@ -818,7 +882,6 @@ header nav ul li a:hover {
 }
 .special-menus .container-special-menus .card-special-menus > span {
   padding: 1.6rem 4rem;
-  border-bottom: 1px dashed #4c4343;
   font-size: 1.5rem;
   width: 100%;
   display: flex;
@@ -827,6 +890,15 @@ header nav ul li a:hover {
   gap: 1rem;
   justify-content: center;
   justify-content: flex-start;
+  position: relative;
+}
+.special-menus .container-special-menus .card-special-menus > span:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border: 1px dashed #4c4343;
 }
 .special-menus .container-special-menus .card-special-menus > span:before {
   font-size: 1rem;
@@ -916,6 +988,10 @@ header nav ul li a:hover {
   min-width: 100%;
   height: 500px;
   box-shadow: 4px 4px 20px 0px #4c4343;
+  transition: transform 450ms ease-in-out;
+}
+.private .container-private .adaptive-img-cover:hover {
+  transform: scale(1.05);
 }
 @media (min-width: 780px) {
   .private .container-private {
@@ -946,28 +1022,62 @@ header nav ul li a:hover {
 .filtered-list {
   width: 100%;
   min-height: 380px;
+  width: 100%;
   display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 4rem;
   justify-content: center;
-  flex-wrap: wrap;
-  gap: 4rem 1rem;
   position: relative;
   padding-bottom: 3rem;
+  background-color: #ebe3db;
+}
+.filtered-list:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: white;
+  width: 100%;
+  height: 20rem;
+  z-index: 2;
+}
+@media (min-width: 480px) {
+  .filtered-list:before {
+    height: 6rem;
+  }
+}
+.filtered-list .adaptive-img-cover {
+  width: 90%;
+}
+@media (min-width: 480px) {
+  .filtered-list .adaptive-img-cover {
+    width: 47%;
+  }
+}
+@media (min-width: 780px) {
+  .filtered-list .adaptive-img-cover {
+    max-width: 26.6666666667%;
+  }
 }
 .filtered-list button {
   border: none;
   outline: none;
-  background-color: #ebe3db;
-  color: #4c4343;
-  padding: 1rem 2rem;
-  margin-bottom: 2rem;
-  text-transform: uppercase;
-  font-weight: 700;
+  background-color: white;
+  padding: 0;
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
-  position: relative;
+  z-index: 10;
 }
-.filtered-list button:focus {
+.filtered-list button span {
+  background-color: #ebe3db;
+  color: #4c4343;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding: 1rem 2rem;
+}
+.filtered-list button:focus span {
   background-color: #950000;
   color: white;
 }
@@ -980,40 +1090,69 @@ header nav ul li a:hover {
 .filtered-list button[data-filter=vegan]:focus ~ div:not([class*=vegan]) {
   display: none;
 }
-@media (min-width: 1108px) {
+@media (min-width: 480px) {
   .filtered-list button {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
+    min-width: 10rem;
+    max-width: 10rem;
+    height: 6rem;
+  }
+  .filtered-list button[data-filter="*"] {
+    position: absolute;
+    top: 0;
+    left: 10%;
+  }
+  .filtered-list button[data-filter=meat] {
+    position: absolute;
+    top: 0;
+    left: 30%;
+  }
+  .filtered-list button[data-filter=vegan] {
+    position: absolute;
+    top: 0;
+    left: 50%;
+  }
+  .filtered-list button[data-filter=fish] {
+    position: absolute;
+    top: 0;
+    left: 70%;
   }
 }
-.filtered-list .cheat-div {
-  width: 0px;
-  max-height: 30px;
-}
-@media (min-width: 720px) {
-  .filtered-list .cheat-div {
-    width: 80px;
+@media (min-width: 780px) {
+  .filtered-list button[data-filter="*"] {
+    left: 20%;
+  }
+  .filtered-list button[data-filter=meat] {
+    left: 35%;
+  }
+  .filtered-list button[data-filter=vegan] {
+    left: 50%;
+  }
+  .filtered-list button[data-filter=fish] {
+    left: 65%;
   }
 }
-@media (min-width: 813px) {
-  .filtered-list .cheat-div {
-    width: 180px;
+@media (min-width: 980px) {
+  .filtered-list button[data-filter="*"] {
+    left: 30%;
+  }
+  .filtered-list button[data-filter=meat] {
+    left: 40%;
+  }
+  .filtered-list button[data-filter=vegan] {
+    left: 50%;
+  }
+  .filtered-list button[data-filter=fish] {
+    left: 60%;
   }
 }
-@media (min-width: 1108px) {
-  .filtered-list .cheat-div {
-    width: 280px;
+@media (min-width: 480px) {
+  .filtered-list {
+    padding-top: 10rem;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 4rem 1rem;
   }
-}
-.filtered-list .cheat-container {
-  width: 100%;
-  height: calc(100% - 60px);
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  z-index: -4;
-  background-color: #ebe3db;
 }
 
 .sides {
@@ -1170,7 +1309,6 @@ header nav ul li a:hover {
 
 footer {
   width: 100%;
-  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -1180,28 +1318,32 @@ footer {
 }
 footer .info {
   width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 0;
+  background-image: url("../assets/images/footer-bg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+footer .info .info-container {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 3rem;
-  background-image: url("../assets/images/footer-bg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  gap: 2rem;
   padding: 3rem 2rem;
+  max-width: 1400px;
 }
-footer .info .card-info {
-  width: 100%;
+footer .info .info-container .card-info {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 0;
 }
-footer .info .card-info h6 {
+footer .info .info-container .card-info h6 {
   font-size: 1.8rem;
-  border-bottom: 1px dashed white;
-  width: 100%;
   padding: 1.6rem 0;
   width: 100%;
   display: flex;
@@ -1209,57 +1351,60 @@ footer .info .card-info h6 {
   flex-direction: row;
   gap: 0;
   justify-content: center;
+  position: relative;
 }
-footer .info .card-info a {
+footer .info .info-container .card-info h6:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border: 1px dashed white;
+}
+footer .info .info-container .card-info a {
   padding: 1rem;
   color: white;
   transition: all 0.2s ease-in;
   font-size: 2rem;
 }
-footer .info .card-info a:hover {
+footer .info .info-container .card-info a:hover {
   color: #950000;
 }
-footer .info .card-info span {
+footer .info .info-container .card-info span {
   padding: 0.5rem 0;
+}
+@media (min-width: 780px) {
+  footer .info .info-container {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  footer .info .info-container .card-info {
+    max-width: 30%;
+    min-width: 30%;
+  }
 }
 footer .terms {
   width: 100%;
+  background-color: #444444;
+}
+footer .terms .terms-container {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
   gap: 2rem;
   padding: 2rem 4rem 4rem;
-  background-color: #444444;
 }
-footer .terms .adaptive-img-contain {
+footer .terms .terms-container .adaptive-img-contain {
   width: 64px;
   height: 64px;
 }
-footer .terms p {
+footer .terms .terms-container p {
   text-align: center;
+  max-width: 1400px;
 }
-footer .terms p span, footer .terms p a, footer .terms p a:visited {
+footer .terms .terms-container p span, footer .terms .terms-container p a, footer .terms .terms-container p a:visited {
   color: white;
   text-decoration: underline;
-}
-@media (min-width: 780px) {
-  footer .info {
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
-  }
-  footer .info .card-info {
-    max-width: 30%;
-    min-width: 30%;
-  }
-}
-@media (min-width: 980px) {
-  footer .info {
-    max-width: 1400px;
-    padding-bottom: 5rem;
-  }
-  footer .terms p {
-    max-width: 1400px;
-  }
 }/*# sourceMappingURL=index.css.map */
