--- a/scss/about/_private.scss
+++ b/scss/about/_private.scss
@@ -15,6 +15,10 @@
             min-width: 100%;
             height: 500px;
             box-shadow: 4px 4px 20px 0px var.$color-brown;
+            transition: transform 450ms ease-in-out;
+            &:hover {
+                transform: scale(1.05);
+            }
         }
     }
     @media (min-width: 780px) {
