--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -10,28 +10,22 @@
             min-height: 340px;
             width: 100%;
             height: 100%;
-        }
-    }
-    @media (min-width: 780px) {
-        .hero-container {
-            .adaptive-img-cover {
-                max-height: 550px !important;
-                min-height: 550px !important;
+            @media (min-width: 780px) {
+                @include mxn.minMax(550px);
+            }
+            @media (min-width: 980px) {
+                max-width: 40%;
+                min-width: 40%;
+                @include mxn.minMax(340px);
             }
         }
-    }
-    @media (min-width: 980px) {
-        .hero-container {
-            width: 100%;
-            flex-direction: row-reverse !important;
-            justify-content: center;
-            align-items: flex-start !important;
-            .adaptive-img-cover {
-                max-width: calc(var.$width-container / 2.5);
-                min-width: calc(var.$width-container / 2.5) !important;
-                min-height: 280px !important;
-                max-height: 280px !important;
-            }
+        .hero-text {
+            @include mxn.flex(column, 2rem);
+            line-height: 1.5;
+        }
+        @media (min-width: 980px) {
+            @include mxn.flex(row-reverse, 3rem);
+            align-items: flex-start;
         }
     }
 }
