--- a/scss/home/_hero.scss
+++ b/scss/home/_hero.scss
@@ -3,6 +3,9 @@
 
 .hero {
     @include mxn.flex(column, 1.2rem);
+    h1 {
+        text-align: center;
+    }
     .hero-container {
         @include mxn.flex(column, 2rem);
         .adaptive-img-cover {
